# class-25-assignment-groupygroupygroup

./: README.md
mpi/: .gitignore  Makefile.am  Memory.ipynb  fld1d.c  fld1d.h  heat_eqn.c  heat_eqn.h  heat_eqn.ipynb  heat_eqn_solve.c  memory.c  mpi_dl_test.c  params.h  test_derivative.c  test_heat_eqn.c  time-fc.csv
